# telemetry-tempest-plugin

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .zuul.yaml  CONTRIBUTING.rst  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
devstack/: README.rst  plugin.sh  settings
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  test_additions.rst
playbooks/: python-3.12-install.yaml
playbooks/legacy/telemetry-dsvm-integration-tempest-plugin/: post_test_hook.sh  run.yaml
releasenotes/notes/: drop-py-2-7-b86d74653b14779b.yaml  drop-python38-support-59b0b2f406651efb.yaml  use-gnocchi-by-default-4e9a65c81c396900.yaml  use-metadata-grouping-for-prometheus-autoscaling-763c98141a940531.yaml
releasenotes/source/: conf.py  index.rst
telemetry_tempest_plugin/: config.py  exceptions.py  plugin.py
telemetry_tempest_plugin/aodh/api/: base.py  test_alarming_api.py  test_alarming_api_negative.py
telemetry_tempest_plugin/aodh/api/admin/: test_alarming_api_admin.py
telemetry_tempest_plugin/aodh/api/gnocchi/: test_alarming_api.py  test_alarming_api_negative.py
telemetry_tempest_plugin/aodh/api/sql/: test_alarming_api.py
telemetry_tempest_plugin/aodh/service/: client.py
telemetry_tempest_plugin/gnocchi/scenario/: __init__.py
telemetry_tempest_plugin/integration/hooks/: post_test_hook.sh
telemetry_tempest_plugin/scenario/: test_gnocchi.py  test_telemetry_integration.py  test_telemetry_integration_prometheus.py  utils.py
telemetry_tempest_plugin/scenario/gnocchi_gabbits/: live.yaml  search-resource.yaml
telemetry_tempest_plugin/scenario/telemetry_integration_gabbits/: aodh-gnocchi-threshold-alarm.yaml  autoscaling.yaml  create_stack.json  update_stack.json
telemetry_tempest_plugin/scenario/telemetry_integration_prometheus_gabbits/: autoscaling.yaml  ceilometer-sg-core-integration.yaml  create_stack.json
