[metadata]
name = telemetry_tempest_plugin
summary = Tempest plugin for Telemetry Projects
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    telemetry_tempest_plugin

[entry_points]
tempest.test_plugins =
    telemetry_tests = telemetry_tempest_plugin.plugin:TelemetryTempestPlugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = telemetry_tempest_plugin/locale
domain = telemetry_tempest_plugin

[update_catalog]
domain = telemetry_tempest_plugin
output_dir = telemetry_tempest_plugin/locale
input_file = telemetry_tempest_plugin/locale/telemetry_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = telemetry_tempest_plugin/locale/telemetry_tempest_plugin.pot
