[metadata]
name = telemetry_tempest_plugin
summary = Tempest plugin for Telemetry Projects
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://www.openstack.org/
python-requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8


[files]
packages =
    telemetry_tempest_plugin

[entry_points]
tempest.test_plugins =
    telemetry_tests = telemetry_tempest_plugin.plugin:TelemetryTempestPlugin
